30.aug (la)
      - fix #12161: Changing time signature should change autobeam properties
29.aug (la)
      - fix #12322: Exported parts close on command without a warning
21.aug (lv)
      - fix #11675: Crash opening MusicXML from Finale
        note: the attached file romance-1.zip still does not open correctly (probably a separate
        issue still to be investigated), but at least it does not crash due to the voice mapper
        anymore
18.aug (lv)
      - reworked MusicXML voice mapper
       (la)
      - fix bug on midi import
15.aug (la)
      - fix #12084: Crash when running transpose with title selected
      - fix #11926: Pedal marking created in 1.0 are displayed incorrectly in MuseScore 1.1
14.aug (la)
      - fix translation of context menu on keysig
      - apply patches from Toby Smithe (#12108)

10.aug (la)
      - fix #11927: MusicXML export duplicate chordnames
      - fix #11479: playback swing of quarter notes on counter beat

======== MuseScore 1.1 released ==============

23.jul (lv)
      - remove spurious "Unknown Node <staff>" or "... <voice>" messages on MusicXML import
      - disable unnecessary voice mapper debug message on MusicXML import
21.jul (la)
      - fix #11605: Shift-X with measure selected -> crash
9.jul  (la)
      - add sori and koron persian accidentals
8.jul  (lv)
      - fix #11441: Failure to read MusicXML file with missing parts
3.jul  (la)
      - fix #10585: Accidental offset in small staves corrupted by saving and reloading (patch by Miwarre)
      - fix #10313: Align settings in Edit Text Style dlg box not stored (patch by Miwarre)
1.jul  (la)
      - fix printing of images (fix #10140: Save as PDF with several images causes crash)
      - implement MuseScore Connect
      - reduce default reverb gain from 0.5 to 0.2
      - open MuseScore maximize on very first startup
      - fix rest position for 1 and 3 staff lines
30.jun (la)
      - fix #11267: Shift + drag tuplet, delete, undo cause crash 
29.jun (ws)